chaim-bprint-spec/tests/fixtures/invalid/missing-identity-fields.bprint
{
  "schemaVersion": "1.0",
  "entityName": "Order",
  "description": "Order missing partition key",
  "identity": { "fields": [] },
  "fields": [
    { "name": "orderId", "type": "string", "required": true }
  ]
}